ZumZumFinancials_Dev1/src/objects/Tax_Rate__c.object
<CustomObject>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <label>Tax Rate</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>is_EC_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is EC Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_no_tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is no tax</label>
        <type>Checkbox</type>
    </fields>
    <label>Tax</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Tax_Rate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Tax Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>